--- a/notebooks/2. Save Website.ipynb
+++ b/notebooks/2. Save Website.ipynb
@@ -536,7 +536,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -550,11 +550,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "a409be59cc565fdd9cd1d445dae12795ff47ff2a20843ae007b5519cecc9ca1d"
    }
   }
  },
